--- a/src/markdown/english/2. Stray Cat.md
+++ b/src/markdown/english/2. Stray Cat.md
@@ -12,7 +12,7 @@ If you want to know some stats, the average age that most people first see porno
 
 This is the modern struggle: Lone individuals summoning inhuman willpower, fasting, meditating, and exercising... Up against armies of scientists and statisticians weaponizing abundant food, screens, and medicine into junk food, clickbait news, infinite porn, endless games, and addictive drugs. But just what are the negative effects?
 
-Porn mainly has negative effects to do with the dopaminergic (dopamine) system. Masturbation on its own significantly decreases 32+ vitamins/nutrients, bodily energy, and life force (what you could call "aura"). When porn and masturbation are combined these effects are multiplied. This is important because to have peace of mind, you have to have peace of body first.
+Porn mainly has negative effects to do with the dopaminergic (dopamine) system. Masturbation on its own significantly decreases 30+ vitamins/nutrients, bodily energy, and life force (what you could call "aura"). When porn and masturbation are combined these effects are multiplied. This is important because to have peace of mind, you have to have peace of body first.
 
 Negative effects span from low energy, low motivation, lessened ability to do work, lowered respect for women, depression, anxiety when interacting with others, porn-induced erectile dysfunction, relationship problems, acne, obsession with porn and fantasies, questioning sexuality despite no previous interest, and more. General rule of thumb is physical negatives are to do with frequent masturbation and mental negatives are to do with porn.
 
@@ -28,7 +28,7 @@ To me, the mind should be a servant and a tool, not a master. The monkey mind sh
 
 ## False Incentives
 
-Be aware not to base your reasoning for quitting on any false incentives. Some of us may want to quit to appease our friends, make our partners happier, or become more disciplined. Even though these are great ways to discover nofap, these incentives create the perfect excuse for us to relapse when we are experiencing negative emotions.
+Be aware not to base your reasoning for quitting on any false incentives. Some of us may want to quit to appease our friends, make our partners happier, be better than people we view as "degenerate" or become more disciplined. Even though these are great ways to discover nofap, these incentives create the perfect excuse for us to relapse when we are experiencing negative emotions.
 
 - "I don't care what my friend thinks; it is not a big deal anyway."
 - "She is already happy. It really is not that bad."
