--- a/src/markdown/english/4. Brainwashing.md
+++ b/src/markdown/english/4. Brainwashing.md
@@ -1,16 +1,16 @@
 Before you can lie to another, you must first lie to yourself.
 
-The brainwashing of PMO is the leading cause of failure for users that are trying to leave PMO, once and for all, but end up failing. Brainwashing is the engrained idea that porn provides any benefit. It is also the idea that you are entitled to sex or porn and that sex is the highest goal in your life.
+The brainwashing of PMO is the leading cause of failure for users that are trying to leave PMO once and for all, but end up failing. Brainwashing is the engrained idea that porn provides any benefit. It is also the idea that you are entitled to sex or porn and that sex should be the highest goal in your life.
 
 It includes our upbringing in society, reinforced by the brainwashing of our own addiction and combined with the most powerful influences - our friends, relatives and colleagues. The phrase ’giving up’ is a classic example of brainwashing, implying genuine sacrifice. The beautiful truth is there’s nothing to give up; on the contrary, you are facing freedom. It takes a level of contrarianism to say, “Nope. I’m just going to do my own thing”. That is courage.
 
-Ironically, the most powerful force in this confusion is the user themselves. It’s a fallacy that users are weak-willed or physically weak people. You have to be physically strong to cope with addiction after you know it exists. Perhaps the most painful aspect is that they place themselves as unsuccessful losers and insufferable introverts. A friend could likely be more interesting in person if they hadn’t put themselves down by wasting their energy through PMO.
+Ironically, the most powerful force in this confusion is the user themselves. It’s a fallacy that users are weak-willed or physically weak people. You have to be physically strong to deal with addiction after you know it exists. Perhaps the most painful aspect of porn users is that they place themselves as unsuccessful losers and insufferable introverts. A friend could likely be more interesting in person if they hadn’t put themselves down by wasting their energy through PMO.
 
 One aspect of brainwashing is stress. Porn has subconsciously registered in billions of people's brains as a 'method to relieve stress'. Users believe that it allows them to relax - to move away from their life's difficulties and that it benefits them. This belief, however, is interpreting everything backward. Porn creates the stress.
 
 Porn creates stress by overstimulating your dopamine receptors. Users illude themselves into believing that it is required for relieving stress, even though before they became users, they had no need. And to 'relieve' the pressure, they use it again.
 
-Our brain builds a response to emotions that trigger pangs. These emotions are fear, anxiety, and boredom. Fear (in a user's life) typically comes from everyday events that happen in life, such as fear of getting laid off, fear of failure or having a bad day. In these cases, porn is imagined as a "savior" at the end of the day that will make everything better - even though it will make everything harder to cope with.
+Our brain builds a response to emotions that trigger 'pangs'. These emotions are fear, anxiety, and boredom. Fear (in a user's life) typically comes from everyday events that happen in life, such as fear of getting laid off, fear of failure or having a bad day. In these cases, porn is imagined as a "savior" at the end of the day that will make everything better - even though it will make everything harder to cope with.
 
 Anxiety and uncertainty are also emotions where a similar response happens. In response to not being able to work out how something will play out, this plagues our minds with negative thoughts. Pangs can occur in these moments because porn is interpreted as something that fixes negative emotions. Instead, it creates these negative emotions, worsening over time.
 
@@ -24,34 +24,46 @@ Porn is actually relatively easy to quit when you understand its true nature. Th
 
 Choice is our greatest power in life. Once you realize you have this power, you are like an eagle who grew up thinking he was a chicken, living with other chickens — but one day learned he could fly.
 
-...
+((expanded deets on brainwashing...))
 
 
 Imagine your limbic brain (monkey brain) is a dumb electrical appliance. If you unplug 99 out of 100 power cords (false reasons to use porn), it doesn’t know you did that, all it knows is it still has power. You have to unplug every cord, every reason. Then, you will find peace like you’ve never known.
 
 Be careful of your own negativity. Pessimism is self-fulfilling. If you say you are going to fail, you nearly always will. If you say something will be bad, you will nearly always percieve it that way. There is no benefit to creating that negativity in the first place.
 
-Peace comes from truth; but how can you find truth? One of the ways in which I know that I am finding truths is that then problem is solved for good.
+Peace comes from truth; but how can you find truth? One of the ways in which I know that I am finding truths is that the problem is solved for good.
 
 Examples of what users say:
 
-- "Porn is freedom": This is a lie. Any freedom that leads to the desire for more freedom is not freedom.
+- "Porn is freedom": This is a lie. Any freedom that leads to craving is not freedom.
 
 - "I can quit anytime you want, I just don't want to quit right now.": Then when will you ever quit? How much longer do you have to lie to yourself thinking there is a benefit to porn?
 
 Someone repeating these mantras to themselves is a form of subconscious rationalization used to justify their biological addiction.
 
+In reality, the key to the mental prison or porn is in your own mind. You can not ask another person for this key - one must find it for themselves. The answers lie within yourself. Yet we have been told to look everywhere but ourselves for answers.
+
 ## Brainwashing Through Bad Advice
 Unfortunately, the world is filled with bad advice. So much in fact, that it makes sense for the majority to not be successful in what they truly want to achieve. The individual has to filter out the effective information from the ineffective information. It takes effort, but it is a liberating process that provides one the steering wheel on life. However, most have been conditioned to hand over the reigns to "professionals" who seemingly know everything. This opens the gates for shallow advice, con artists, and wasting time.
 
-The trouble with advice that does not work - is that those that preach it - pronounce their advice as given fact. For one who wants to truly understand the scope of their addiction and how recovery works, if they do not unlearn these negative practices and unproductive ways of thinking then they will be forever held to them.
+The trouble with advice that does not work - is that those that preach it - pronounce their advice as given fact. For one who wants to truly understand the scope of their addiction and how recovery works, if they do not unlearn these false understandings and unproductive ways of thinking then they will be forever held to them.
 
+The bad advice causes one to feel the need to constantly reinforce their newly picked up beliefs. However, *the constant assertion of belief is an indication of fear*. You do not need to constantly assert truth, because it is undisputed.
+
+((talk about streaks))
+
+((talk about one step at a time))
+
+((talk about "monsters"))
+"it was not some mysterious monster in my mind which forced me to use porn but it was me all along."
+
+((talk about cycles))
+
+((talk about weening))
 
 ## The Path Towards Peace
 When self-improvement fails, work on discovering the truth. The search for peace is really the search for truth. Try to see the advantage of understanding things by discovering the truth rather than by practice.
 
 When you discover the truth, bad habits can disappear with little effort through understanding.
 
-More broadly, I may see some facet of myself that I don’t like. Maybe I see it in a friend and then can’t unsee it to the point that we can no longer be friends.
-
-"Self-improvement" is just a dressed up form of self-conflict.
+Only when the mind is still, tranquil, not expecting or grasping or resisting a single thing, is it possible to see what is true. It is the truth that liberates, not your effort to be free.
