--- a/src/markdown/english/5. Love.md
+++ b/src/markdown/english/5. Love.md
@@ -1,36 +1,38 @@
-Love is an important part of your understanding, relating to semen retention and pleasures. The understandings and changes happen deep within the mind, because addiction and pleasure-chasing is not a one-off. It is a way of living. If your identity and ideals do not match up with your actions then you will have a dissonance that can only be fixed by A. reverting to pleasure-chasing or B. changing your identity, ideals and understandings (the self).
+Love is an important part of your understanding, relating to semen retention and pleasures. The understandings and changes happen deep within the mind, because addiction and pleasure-chasing is not a one-off thing. It is a way of living. If your identity and ideals do not match up with your actions then you will have a dissonance that can only be fixed by A. reverting to pleasure-chasing or B. changing your identity, ideals and understandings (the self).
 
-On intimacy: sex isn’t fulfilling, intimacy is. Intimacy is actually an emotional need, not just physical, even for men. Porn does not provide intimacy, it keeps you from finding it.
+Using another as a means of satisfaction and security is not love. Love is never security; love is a state in which there is no desire to be secure; it is a state of vulnerability. Sex isn’t fulfilling, intimacy is. Intimacy is actually an emotional need, not just physical, even for men. Porn does not provide intimacy, it keeps you from finding it.
 
 When sex is natural and normal it is a game played according to rules that you make up yourselves without giving a moment’s thought to how others do it or how it is supposed to be done.
 
-Fixating on the naked, sexual parts of women dulls your ability to appreciate the beauty of their smile, or their eyes lighting up when they talk or laugh. After quitting porn, you will be amazed how beautiful real, everyday women are — even with their clothes on.
+Fixating on the naked, sexual parts of women dulls your ability to appreciate the beauty of their smile, or their eyes lighting up when they talk or laugh. After quitting porn, you will be amazed how beautiful real, everyday women are.
 
 The skewed image porn creates (that society accepts) skews the vision of what a healthy relationship looks like. It makes it difficult for people to find meaningful partners (because they are looking for perfection) and when they do find partners, they want them for pleasure, not for connection. Such a shallow desire is just another craving for pleasure
 
 A lot of external battles happen because your internal state is not good. When you’re naturally internally peaceful you’re going to pick fewer fights. You’re going to be more loving without expecting anything in return. That will take care of things on the external-relationship front.
 
-"Memories of love never pass. They linger, guide, and influence long after the source of stimulation has faded. There is nothing new in this. Every person, who has been moved by GENUINE LOVE, knows that it leaves enduring traces upon the human heart. The effect of love endures, because love is spiritual in nature. The man who cannot be stimulated to great heights of achievement by love, is hopeless--he is dead, though he may seem to live."
+## Love Is A Gift
 
-If you believe yourself unfortunate, because you have "loved and lost," perish the thought. One who has loved truly, can never lose entirely. Love is temperamental and transitory. It comes when it pleases, and goes away without warning. Accept and enjoy it while it remains, but spend no time worrying about its departure. Worry will never bring it back.
+Love is a gift of energy. It is you saying: I provide myself, in all that I am to you. And you will provide all that you are to me. It is a gift of energy, and purity. If you do not believe someone deserves this gift (in love), do not provide it.
 
-## The Gift
+This is the nature of love; a mutual transaction. Yet people these days are so cheap - They take mutual transactions which do not favor them, all for the chase of pleasure and feeling.
 
-Love is a gift of energy.
+If one looks for purity, instead of thinking of when the partner will be in the bedroom, then you will experience a real love; a love untainted by what porn has tried to replicate, but has failed in doing. This innocence between two partners, that is meaningful, is true beauty.
 
-It is you saying: I provide myself, in all that I am to you. And you will provide all that you are to me. It is a gift of energy.
-
-If you do not believe someone deserves this gift (in love), do not provide it.
-
-## Fear Of Love
+## Fear of Love
 
 Some who leave porn or who practice semen retention gain an unhealthy view on relationships. In their attempt to leave porn, they block out all sexual thoughts, and they numb themselves into a weird state where they are fearing visiting social media or they avoid women. This fear only creates disadvantages.
 
 If you partake in this unhealthy view on relationships where you fear anything sexual or intimate, your body can go, "Hey, I guess we're just not going to have sex. We're not going to be able to masturbate, etc". Avoidance of intimacy and love can cause you to become more submissive and it can cause your libido and energy to go down.
 
-Instead of the toxic idea that blocking out something and fearing it will help anything, you should instead build up a healthy view on what relationships truly mean, and the value of a loving partner.
+Instead of the toxic idea that blocking out something and fearing it will help anything, it is more productive to build up a healthy view on what relationships really mean, and the value of a sincere, loving partner.
 
-Some also fear loss, because they see all love has an end. But then again, all things have an end, and that is where value comes from. In relationships, cherish what you have, but do not cling onto the past, it will lead nowhere.
+Some also fear loss, because they see all love has an end. But then again, all things have an end, and that is where value comes from. In relationships, cherish what you have, but do not cling onto the past, it will lead you nowhere.
+
+You can have sex and can still retain your energy. You just need to keep it in moderation, depending on how much you value the energy you keep. If it becomes the thing you look to after the end of a tough day, it can fill the same role as you imagined porn did.
+
+Sex is the exchange of intimacy and purity between two individuals. One who partakes in sex too often loses their purity. This can be noticed in their demeanor, their attitude, everything.
+
+For one that truly cares about their partner, they will likely feel bad about taking away their purity through sexual acts. However, if the trade is mutually beneficial, there is nothing to worry about.
 
 ## Obsession
 
@@ -40,16 +42,26 @@ Attachment builds toxicity, negativity, and tunnel vision. The big picture is th
 
 One rule of thumb I have learnt with relationships is that you do not want to be attached by the hip to your partner if you want positivity in your life. You want to work in parrallel, providing support for one another, but neither should be dependant on another.
 
+Breaking out of attachment may be difficult, but it will provide freedom. It takes introspection and humility.
+
 ## Breakups
 
-In reaction to breakups, something in your mind may view pornography as a way to cope. However, porn is void of love. The beauty, the purity, and benefit of a true loving relationship is absent. Understand love in its ways and you have no need to cope with anything. The beauty of love is that it can be cherished and valued while experienced with a loved partner. When a partner is lost, use the sexual energy to transmute into other areas of your life, rather than wasting it on MO.
+In reaction to breakups, something in your mind may view pornography as a way to cope. However, porn is void of love. The beauty, the purity, and benefit of a true loving relationship is absent. Understand love in its ways and you have no need to cope with anything. When a partner is lost, you can use the sexual energy to transmute into other areas of your life, rather than wasting it on masturbation.
+
+It is okay to feel the pain of a partner leaving - but porn is no light in the dark. After going through something which is tough, why punish yourself even more?
+
+If you desire sexual release, MO (not PMO) is an option, but as said before, transmuting kept energy has more of a benefit, and you don't want to be wasting your energy so freely.
+
+"Memories of love never pass. They linger, guide, and influence long after the source of stimulation has faded. There is nothing new in this. Every person, who has been moved by GENUINE LOVE, knows that it leaves enduring traces upon the human heart. The effect of love endures, because love is spiritual in nature. The man who cannot be stimulated to great heights of achievement by love, is hopeless--he is dead, though he may seem to live."
+
+If you believe yourself unfortunate, because you have "loved and lost," perish the thought. One who has loved truly, can never lose entirely. Love is temperamental and transitory. It comes when it pleases, and goes away without warning. Accept and enjoy it while it remains, but spend no time worrying about its departure. Worry will never bring it back.
 
 ## Entitlement
 
 Some people believe they are entitled to sexual release. But entitlement is a disease.
 
-They call it "self-love" but really it is self-destruction. When sexual energy is harnessed, it is a tool. But when untrained, it is nothing but a restriction.
+People feel entitled to love and pleasure, because they chase pleasure and don't love themselves.
 
-Conflicting information is the birth of confusion. And many preach messages that seem credible, that seem legitimate, like they know what they are talking about. But I assure you, in the world we live in, mistruths run everything. Is this "bad"? - For the group? No. For the individual? Yes. This is because truth does not 
+Young men have been raised by fake partners on the internet. Thousands of "mates" who they expect to present themselves when they desire. A lot of us were introduced to sexual ideas, and what we believe to be love, through pornography. The pure, and beneficial act of two sincere partners bonding is morphed into this lustful simplified version that we take to be what love is.
 
-...
+This entitlement transfers poorly into new relationships - because all the mind wants to think about is when you will get to sleep with your partner. However, by reframing our views on what love is, and the value of relationships, we can find the true value of love - past pleasure.
