--- a/src/markdown/english/6. Neurology.md
+++ b/src/markdown/english/6. Neurology.md
@@ -1,21 +1,52 @@
 Porn is not a disease. Porn is a voluntary behavior.
 
-You may push back against this statement, however it is true. You will only use porn if you see some benefit to it, and only if it is the most attractive path at one time.
+You may push back against this statement, however the mind works with benefits/negatives. You will only use porn if you see some benefit to it, and only if it is the most attractive path at one time.
 
-((fear))
+So how do you stop seeing the benefit in porn? Well porn provides instant "pleasure". And if you see benefit in instant "pleasure" why would you not consume porn?
 
-Just because you accidentally see porn or someone naked, does not create negative dopamine effect. Actively seeking porn or lewd material for pleasure does.
+The thing with negative habits and negative patterns is that you cannot just pick and choose which destructive activity you keep. The root which you must dig to become free from one will also free you from the others too. If one chases pleasure, and they remove porn from their life, it will just be a waiting game until they look for it again. If one chases feeling or emotion, they will feel entitled and will look for it again.
 
-“Everyone is failing, so how isn’t it likely that I too will fail?” And this is what I call, “The Failure Circle”. One person fails because they failed to follow instructions, and then those that hear of this person’s failure get doubt and fear of failure, and thus slip up. Their slip ups are reported within an online community, and others who see them get doubt and fear as well, and it goes on and on and on. They get the false impression that it’s hard, and thus it becomes hard.
+People crave image and they crave feelings. Craving image is the desire to be loved, or the desire to be superior. Craving feeling is the desire for pleasure, or the desire to take unhealthy risks. These things are the main roots of negative habits and patterns in people.
 
-((emotion))
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Image of endorphin structure" src="http://localhost:8080/md_images/neurosis.png" height="450px"></div>
 
-An emotion is our evolved biology predicting the future impact of a current event. In modern settings, it’s usually exaggerated or wrong.
+To Grow:
 
-((habitual pathways))
+- For one that craves love; they need to learn to love themselves.
+- For one that craves superiority; they need to have humility and sincerity to grow, otherwise their destructive nature will turn inward.
+- For one that craves pleasure; they need to understand peace and freedom is what they are really looking for.
+- For one that craves risk; they need to discover their own value.
+
+These things are the building blocks of the mind. What society, what people, base their entire lives around. However this craving has a destructive effect on others, and themselves.
+
+A human will normally crave, and chase for their entire life. They will build an image of perfection, of a possible utopia, where everything would be fine. All they need is to get what they have wanted. However, everything you have ever desired is right here, in the present moment. Peace is not in the future. However, chasing pleasure, craving these things, distracts one from peace.
+
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;" title="Source: Heroin Hive (book)"><img alt="Image of endorphin structure" src="http://localhost:8080/md_images/void.png" height="230px"></div>
+
+## Fear
+
+An emotion is our evolved biology predicting the future impact of a current event. In modern settings, it’s usually exaggerated or false. This does not mean emotion is not useful, but it is not a reliable source of information. Especially when emotion is all that you are thinking about. For example, negative thoughts usually attach themselves to everything. If somebody is only thinking negative thoughts, they will attach negativity to everything. Even if the things they are looking at have not changed, their clarity is taken away via these negative thoughts.
+
+Fear is the destructive energy in man. It withers the mind, it distorts thought, it leads to all kinds of extraordinarily clever and subtle theories, absurd superstitions, dogmas, and beliefs.
+
+It is easy to say "you should not fear" or similar 'inspirational' quotes, but this does not do much. What does do something is identifying when you are thinking in fear, and, away from emotion, seeing if you really need to fear anything.
+
+Also, if because you accidentally see someone naked or porn (by accident), it will not create a destructive dopamine effect. However, actively seeking lewd material or porn for pleasure does. You do not need to be afraid of watching movies where there are sexual scenes. Or afraid of lewd material. You can change your environment to where you see these things rarely - however, you do not need to fear these things. Your view on these things completely determines their ability to impact you.
+
+"Everyone is failing, so how isn’t it likely that I too will fail?". This is what is called, “The Failure Circle”. One person fails because they failed to follow instructions, and then those that hear of this person’s failure get doubt and fear of failure, and thus slip up. Their slip ups are reported within an online community, and others who see them get doubt and fear as well, and it goes on and on and on. They get the false impression that it’s hard, and thus it becomes hard.
+
+However, when one reframes the way they look at PMO use and no longer sabotaging themselves, then they do not need to care for these others. **To make progress, you must look out for yourself**. 
+
+## Habitual Pathways
 
 Habits are everything—everything we are. We are trained in habits from when we are children, including potty training, when to cry and when not to, how to smile and when not to. These things become habits—behaviors we learn and integrate into ourselves. 
 
 When we’re older, we’re a collection of thousands of habits constantly running subconsciously. We have a little bit of extra brainpower in our neocortex for solving new problems. You become your habits.
 
-"You have to take a second to sit down, to thoroughly observe your patterns. Do you move when you don't want to move, do you get angry when you don't want to get angry; you have to fix these things about yourself, you have to give a fuck about yourself and that makes life so much better." - XXXTentacion
+However, you can change these habits, and the way your mind views the world, through increasing your neuroplasticity. This takes the humility to change, and to question the very things such as your ego, your current beliefs, and life direction.
+
+"You have to take a second to sit down, to thoroughly observe your patterns. Do you move when you don't want to move, do you get angry when you don't want to get angry; you have to fix these things about yourself, you have to give a fuck about yourself and that makes life so much better." - Jah.
+
+## The Self-Improvement Trap
+
+"Self-improvement" is just a dressed up form of self-conflict.
