--- a/src/markdown/english/8. Transmutation.md
+++ b/src/markdown/english/8. Transmutation.md
@@ -2,7 +2,7 @@ Why are we spilling our drive freely?
 
 That life that you're supposed to have inside of you, that drive that you're supposed to have, to either go and get women or go and work yourself up to be attractive and successful enough to get women. That drive inside of you just gets diminished and thrown into a Kleenex.
 
-Transmutation is the art of directly transferring the kept sexual energy (from semen retention) into productive things which encourage your growth. 
+Transmutation is the art of directly transferring the kept sexual energy (from semen retention) into productive expenditures which encourage growth. 
 
 ...
 
@@ -14,7 +14,7 @@ But once your survival needs are met, then what's left is the biggest primitive 
 
 ((For MO)) Imagine telling a fat guy that he has to go to the gym every single day, and if he misses one day, all of the benefits reset. That is inhumane. And that's what these NOFAP YouTubers do to you, and they convince you that you need to be on a streak. You don't need to be on a streak. ((We have to realise we are trying to get benefits not self-hatred))
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img src="http://localhost:8080/md_images/field_aura.png" height="250px" class="mdimg"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Drawing of a person with an aura (not found)" src="http://localhost:8080/md_images/field_aura.png" height="250px" class="mdimg"></div>
 
 When I talk about energy, I am not just talking about bodily energy, but the actual "amount of life" within you. When you release semen, you spend some of your own energy/life in this process and that is the tradeoff.
 
@@ -38,7 +38,7 @@ There are a number of physical outlets for transmutation. These are either physi
 
 Transmutation does not have a how-to guide. How-to's do not work except for extreme basics. You kind of just get a feel for it, when you notice it. And when you do, you realize what you were missing this whole time.
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img src="http://localhost:8080/md_images/circle_aura.png" height="250px" class="mdimg"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Image of a person with energy around them (not found)" src="http://localhost:8080/md_images/circle_aura.png" height="250px" class="mdimg"></div>
 
 ### Physical
 
@@ -86,7 +86,7 @@ Transmutation Method Number 6 is having a creative output, either through music,
 
 You will find that when you capture your sexual energy, you can have an incredible creative output. This can be really helpful on the journey to create things which you truly treasure. Expression is also a way to recover from things you do not yet understand; to turn hard-to-read thoughts into forms of art is an effective process of recovery.
 
-## ...?
+## About Transmutation
 
 There are also things like cold showers, cleaning your environment, thinking about the processes to achieve goals, which are not direct ways of transmuting energy, but they definitely support it. However, do not try to add in tens of new routines into your day at once and stressing over missing timings. You want to slowly but maticulously build up a routine and lifestyle that supports you and your self-growth, but you do not want your routine to be too environment-dependant either.
 
@@ -104,18 +104,22 @@ Crab mentality, also known as crab theory, is a way of thinking, best described
 
 Some people in your life may be like this. They see success and because they have not found it in themselves, they try to bring you down to their level. What you have to realize is that clashing with these people is a waste of time. You are just fighting ignorance (which is a losing battle), and you are showing them they are relevant.
 
-Instead, for people who discourage our level of energy (some call them "energy vampires"), we should be indifferent no matter through what they do. Acting indifferent will make them feel weaker. Either they will cave in and ask for your help, or they will spiral into their own negativity. In either case, you do not want to surround yourself with these types of people.
+Instead, for people who discourage this level of energy (some call them "energy vampires"), we should be indifferent no matter through what they do. Acting indifferent will make them feel weaker. Either they will cave in and ask for your help, or they will spiral into their own negativity. In either case, you do not want to surround yourself with these types of people.
 
 If a friend is not someone who encourages your self-growth, tell them (in person) directly and unforgivingly the issues you have with them and if they do not have the humility to change, cut them off. Family is trickier, because you can't give up on family. But at the same time, parents or siblings can be negative influences on you whether they realize it or not. For this, I would say to change your environment often, learn how to deal with human nature and learn how to influence those who do not want to listen to you.
 
 In any case, if you hurt other people because they have expectations of you, that’s their problem. If they have an agreement with you, it’s your problem. But, if they have an expectation of you, that’s completely their problem. It has nothing to do with you. They’re going to have lots of expectations out of life. The sooner you can dash their expectations, the better.
 
-Having a good standard for friends will set you up for success in all ways. You should not befriend someone who is a negative influence to your energy, even if you are lonely.
+Having a good standard for friends will also set you up for success in all ways. You should not befriend someone who is a negative influence to your energy, even if you are lonely. If you can't find such people, are you really putting yourself out there as much as you really could to meet new and interesting people?
 
-## Choice (tbf)
+## Choice
 
 In the end, you can choose meaning in your life or you can choose comfort.
 
 If you do not spend the energy you receive you will likely waste it via masturbation. One thing you need to realise is that because MO is mentally linked to porn, you don't want to be using it as a substitute for PMO if you waste your energy via MO. While MO has drawbacks, energy can be regathered within a week generally, while with porn, it takes weeks or months for the body/mind to recover.
 
 If you masturbate or have sex too often it will negatively impact your body and energy levels. Instead of wasting your energy, look for the value within sexual energy, and it can be transmuted into things you find meaningful.
+
+This is how you can propel and find movement in your life.
+
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="Diagram explaining essentialism and direction of energy (not found)" src="http://localhost:8080/md_images/essentialism.png" height="250px" class="mdimg"></div>
