--- a/src/markdown/english/9. Understandings.md
+++ b/src/markdown/english/9. Understandings.md
@@ -1,3 +1,7 @@
 Questions on questions
 
 Before you can fully understand what it means to choose, you have to know how to decline. ((Be decisive))
+
+((you are worthy of freedom))
+
+Freedom is not avoidance of what you don't like. Freedom is having clarity.
