--- a/src/markdown/english/10. Movement.md
+++ b/src/markdown/english/10. Movement.md
@@ -1,5 +1,8 @@
 "mentor-itis" & what next
 
+You can't help people while drowning. ((many attempt to because they avoid themselves))
+
+
 Find three hobbies: One that makes you money, one that keeps you fit, and one that makes you creative/expressive. 
 
 ...
@@ -8,4 +11,12 @@ There’s no single permanent solution to happiness. Rather, achieving happiness
 
 A part of your brain, the basal ganglia, is your autopilot. It does things without you thinking about it, like navigating routes you frequently walk or drive. It frees up the rest of your brain to think about other things. ((Refer to this in reasoning for 15day thing))
 
-<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img src="http://localhost:8080/md_images/divider_1.png" height="100px"></div>
+<div style="display:flex; justify-content:center; margin-top:10px;margin-bottom:10px;"><img alt="-------------" src="http://localhost:8080/md_images/divider_1.png" height="100px"></div>
+
+Many of you may be thankful for this book. You may want to show appreciation but I am not an idol. In the scheme of things, I know nothing, and can grow so much more. And so can you. If you want to thank me, purchase a physical copy for a friend you think may benefit from it, and give opportunity to those who you see in a bad place. Thank you for reading! <3
+
+Burgeon meaning: to grow.
+
+Mind Project Burgeon. - Out -
+
+2022-2023
