--- a/src/markdown/english/7. Environment.md
+++ b/src/markdown/english/7. Environment.md
@@ -4,28 +4,48 @@ A human being becomes his environment. It is critical to savagely and surgically
 
 Breaking addiction requires a new lifestyle. People struggle with breaking addiction because you have to break the physical addiction, and you also have to change your lifestyle. You have to switch to a lifestyle where you can be happy without that substance.
 
+If there is a gaping hole in your life where PMO was, then how do you not expect to fill it? If you still crave pleasure and feeling, then you will just fill that hole with another destructive activity. And then what progress is made? One must change lifestyle and perspective for this change.
+
 ## External Influence
 
 Addiction holds together fake relationships and fake activities. If I drink to be social and do that enough, I’ll find myself hanging out with people I wouldn’t spend time with otherwise. When I’m sober, I can’t tolerate these people, the topics we discuss or the venues we visit. I can only do it drunk.
 
-It can go the other way as well. Let's say hypothetically all of your friends are linked to you by some sort of debilitating habit. how do you move on from that without being a complete loner? How can you move on from your addiction without survivor's guilt?
+It can go the other way as well. Let's say hypothetically all of your friends are linked to you by some sort of debilitating habit ("recovering" together). How do you move on from that without being a complete loner? How can you move on from your addiction without survivor's guilt?
 
 This is the exact problem with "communities" based around leaving addictions. If PMO addiction is your common trait, building a community around it means either you become free or you stay with your friends. This creates unneeded pressure. The first rule of handling conflict is don’t hang around people who are constantly engaging in conflict.
 
+"No-porn" groups and "semen-retention" groups systematically lead people to failure. Not through their own purposeful action, but just through the community itself. First, it creates unneeded pressure. Second, you may ask advice from people that have no idea of what they are talking about. Third, you may try to help people but fail because your only need is to help yourself. Fourth, the community may encourage public streaks and external reward rather than internal. Fifth, groups never lead to truth but consensus. Basically - except for groups based **solely** around spreading the word, groups like these will hinder and hurt your ability to become free.
+
+Conflicting information is the birth of confusion. And many preach messages that seem credible, that seem legitimate, like they know what they are talking about. But I assure you, in the world we live in, mistruths run everything. Is this "bad"? - For the group? No. For the individual? Yes.
+
+If you look at these groups or forums to a second, you can see the desperation in people. They tell themselves that this time will be different, that this time they will take control of themselves. Yet they change nothing. They change nothing in their understanding, and they repeat the same process. After some time, they have broken so many promises to themselves that they do not even trust themselves. They have no confidence. And if they do, they are likely deluded. If you repeat, rather than iterate (changing something each time), then you are wasting time.
+
 Self-development is its own bubble. You're surrounded with positive messages. Everyone's telling everyone you're all going to be successful or your gurus are making posts about being happy and blocking out those negative thoughts. But just like any bubble, there's always a burst.
 
-Whether orchestrated or not the self-help world can put you under a massive illusion the illusion of progress. It's only when you take a second to pause and reflect when you realize nothing has changed. Action faking is an even more lethal form of procrastination because you're tricking yourself into thinking that you're actually making progress.
+Whether orchestrated or not the self-help world can put you under a massive illusion - the illusion of progress. It's only when you take a second to pause and reflect when you realize nothing has changed. Action faking is an even more lethal form of procrastination because you're tricking yourself into thinking that you're actually making progress.
 
-You are more profitable to the self-help industry unhappy and discontent than you are happy and fulfilled.
+A lot of what goes on today is what many of you are doing right now - beating yourself up and scribbling notes and saying, “I need to do this, and I need to do that, and I need to do…” No, you don’t need to do anything. All you should do is what you want to do. If you stop trying to figure out how to do things the way other people want you to do them, you get to listen to the little voice inside your head that wants to do things a certain way. Then, you get to be you.
 
-...
-
-((pressure))
-
-A lot of what goes on today is what many of you are doing right now—beating yourself up and scribbling notes and saying, “I need to do this, and I need to do that, and I need to do…” No, you don’t need to do anything. All you should do is what you want to do. If you stop trying to figure out how to do things the way other people want you to do them, you get to listen to the little voice inside your head that wants to do things a certain way. Then, you get to be you.
+This is the very reason I specify not to read this book presuming everything I write is true. Because if you do not critically think about your life; your circumstances; then you can be led to mistruths as easily as you can be led to truths. Learning is done through the individual, not the mentor. The constant assertion of belief is an indication of fear. So learn what is true, and belief is not needed.
 
 ## Looking For Progress
 
-Looking for progress is essentially looking for pleasure. It is the pleasure of self-image, which says, “I’m in a better place now than I was before.”
+Looking for progress is essentially looking for pleasure. It is the pleasure of self-image, which says, “I’m in a better place now than I was before.” This is why counting days does not work. Why "looking for benefits" and measuring effectiveness just acts as a substitute for PMO.
 
-This is why counting days does not work. Why "looking for benefits" and measuring effectiveness just acts as a substitute for PMO.
+Counting days is like trying to do things "one step at a time". But the reality is, you are creating a staircase where there was not one before. Leaving addiction is not a constant self-battle like how people imagine. You do not fight yourself when you have no dissonance such as wanting PMO but wanting freedom at the same time. When the truth hits home, PMO will not even sound good in theory.
+
+## The Potential of Nootropics (Extra Section)
+
+Nootropics (potent supplements) have a very large potential for speeding up the dopaminergic recovery from porn use, and other addictive activities. While they should not be depended on, and are not necessary, for those that want to utilise them, it can be effective. With time, the research on nootropics will change, and more effective solutions will come out. However, in the current year (2023), the following are the most effective nootropics (in order) for dopaminergic recovery.
+
+1. Bromantane (Intranasal 18mg/day)
+2. NACET (50-100mg/day) [this is better] or NAC (1g/day)
+3. Cortexin (Intranasal 2mg/day)
+4. ALCAR (0.5g/day)
+5. Agmatine Sulfate (750mg 2x/day)
+
+These are the most effective through my thorough research. Each have been studied and verified for their safety and effectiveness. These should not be relied upon for recovery of the dopamine system, but they can help speed it up. You still need to understand the problem to become free.
+
+A little bit about each: Bromantane is a dopamine upregulator with permanent effects (after a few months). NAC is a well-known supplement which has anti-addictive properties. NACET is the same, but newer and much more potent. Cortexin is a peptide which has been shown to increase neuroplasticity, recover people from brain damage, increase brain growth, and support dopamine production. ALCAR is another dopamine upregulator, however it is somewhat more effective for older people. Agmatine Sulfate is mostly used for exercise performance, but it can permanently make positive changes to depressive mood.
+
+It is easy to waste money on nootropics and supplements, but if you want to purchase any, get these. Just wanted to add this in here, for those that would really benefit from these things. I have heard some people call this "cheating" recovery or something, but in reality, porn addiction is completely artificial and man-made. It is smart to use the opportunities your environment makes available to you. So do so.
